--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./src/scss/main.scss">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
         <title>Path Finding</title>
     </head>
     <body>
         
-        <div class="canvas">
+        <main class="wrapper">
+            <div class="wrapper__main">
+                <div class="canvas">
             
-        </div>
+                </div>
+            </div>
+            <div class="sidebar">
+                <div class="sidebar__inner">
+                    <div class="sidebar__inner__section">
+                        <h1>Path Finding</h1>
+                    </div>
+                    <div class="sidebar__inner__section">
+                        <h2>Path Painter</h2>
+                        <p>Pick a block type, then pain it onto the canvas.</p>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <script type="module" src="./src/index.ts"></script>
     </body>
