[style]: added in more colours

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
                     <div class="sidebar__inner__section">
                         <h2>Path Painter</h2>
                         <p>Pick a block type, then pain it onto the canvas.</p>
+                        <div class="sidebar__inner__section__body sidebar__inner__section__body--path-painter">
+                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--blank">
+                                blank
+                            </button>
+                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--wall">
+                                wall
+                            </button>
+                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--finder">
+                                finder
+                            </button>
+                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--target">
+                                target
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
