--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         <h2>Path Painter</h2>
                         <p>Pick a block type, then pain it onto the canvas.</p>
                         <div class="sidebar__inner__section__body sidebar__inner__section__body--path-painter">
-                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--blank">
+                            <button data-painter="0" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--blank">
                                 blank
                             </button>
-                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--wall">
+                            <button data-painter="1" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--wall">
                                 wall
                             </button>
-                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--finder">
+                            <button data-painter="2" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--finder">
                                 finder
                             </button>
-                            <button class="sidebar__inner__section__body__button sidebar__inner__section__body__button--target">
+                            <button data-painter="3" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--target">
                                 target
                             </button>
                         </div>
