[dijkstra]: got basic implementation of dijkstra added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="sidebar__inner__section">
                         <h2>Path Painter</h2>
-                        <p>Pick a block type, then pain it onto the canvas.</p>
+                        <p>Pick a block, then paint it onto the canvas.</p>
                         <div class="sidebar__inner__section__body sidebar__inner__section__body--path-painter">
                             <button data-painter="0" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--blank">
                                 blank
@@ -38,6 +38,18 @@
                             </button>
                             <button data-painter="3" class="sidebar__inner__section__body__button sidebar__inner__section__body__button--target">
                                 target
+                            </button>
+                        </div>
+                    </div>
+                    <div class="sidebar__inner__section">
+                        <h2>Alorithms</h2>
+                        <p>Pick an alorithm and hit start.</p>
+                        <div class="sidebar__inner__section__body">
+                            <select name="alorithmsInp" id="algorithmsInp">
+                                <option value="dijkstra">Dijkstra</option>
+                            </select>
+                            <button id="start-algorithm" class="sidebar__inner__section__body__start">
+                               Start
                             </button>
                         </div>
                     </div>
