[functionality]: added grid size scaller

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                         <h1>Path Finding</h1>
                     </div>
                     <div class="sidebar__inner__section">
+                        <h2>Grid Size: (<span id="gridSize">20x20</span>)</h2>
+                        <p>Adjust the size of the grid!</p>
+                        <div class="sidebar__inner__section__body">
+                            <input id="gridRangeSlider" type="range" min="4" max="40" value="20" step="1">
+                        </div>
+                    </div>
+                    <div class="sidebar__inner__section">
                         <h2>Path Painter</h2>
                         <p>Pick a block, then paint it onto the canvas.</p>
                         <div class="sidebar__inner__section__body sidebar__inner__section__body--path-painter">
